--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -3,6 +3,20 @@
 {% block extrahead %}
   {{ super() }}
 <meta name="google-site-verification" content="JcoJWtexuAxBbxu2HCTUbwJn14MTFU8_TXThe6Bl5_0" />
+
+<!-- Smartsupp Live Chat script -->
+<script type="text/javascript">
+var _smartsupp = _smartsupp || {};
+_smartsupp.key = '828985cc4cd1e8ed84db78c7e169660833766de0';
+window.smartsupp||(function(d) {
+  var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+  s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+  c.type='text/javascript';c.charset='utf-8';c.async=true;
+  c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+})(document);
+</script>
+<noscript> Powered by <a href=“https://www.smartsupp.com” target=“_blank”>Smartsupp</a></noscript>
+
 {% endblock %}
 
 {% block content %}
@@ -15,6 +29,8 @@
 
     <p>This guide provides a step-by-step explanation on how to <strong>install VIPRE using your product key</strong>, <strong>reinstall VIPRE after a computer recovery</strong>, or <strong>download VIPRE already purchased</strong>, among other essential tips.</p>
 
+    <center><a href="http://start.vipre-us.shop/" target="_blank" style="padding:10px 20px; background-color:#0000FF; color:white; text-decoration:none; border-radius:5px;">Get Started With Vipre</a></center>
+    
     <h2>Understanding VIPRE Lifetime Antivirus Protection</h2>
 
     <p>VIPRE offers several antivirus products, including <strong>VIPRE Advanced Security</strong>, <strong>VIPRE Internet Security</strong>, and <strong>VIPRE Antivirus Plus</strong>. Some users opt for a <strong>VIPRE lifetime subscription</strong>, which provides continuous protection without the need for yearly renewals.</p>
@@ -36,6 +52,9 @@
         <li>You have your <strong>VIPRE activation code</strong> or <strong>lifetime license key</strong> ready</li>
         <li>Your previous antivirus (if any) has been uninstalled to prevent conflicts</li>
     </ul>
+
+    <center><a href="http://start.vipre-us.shop/" target="_blank" style="padding:10px 20px; background-color:#0000FF; color:white; text-decoration:none; border-radius:5px;">Get Started With Vipre</a></center>
+
 
     <h2>How to Install VIPRE Using Product Key or Activation Code</h2>
 
