--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -96,6 +96,11 @@ window.smartsupp||(function(d) {
 {% endblock %}
 
 {% block content %}
+
+<header>
+        <div class="logo">VIPRE Blog</div>
+        
+    </header>
   <div style="background-color: #fefefe; padding: 1.5em; border: 1px solid #ccc; margin-bottom: 2em;">
 
     
