--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -98,9 +98,10 @@ window.smartsupp||(function(d) {
 {% block content %}
 
 <header>
-        <div class="logo">VIPRE Blog</div>
-        
-    </header>
+    <div class="logo">
+        <img src="https://vipreprotectpc.readthedocs.io/vipre-security.jpg">
+    </div>        
+</header>
   <div style="background-color: #fefefe; padding: 1.5em; border: 1px solid #ccc; margin-bottom: 2em;">
 
     
