--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -99,7 +99,7 @@ window.smartsupp||(function(d) {
 
 <header>
     <div class="logo">
-        <img src="https://vipreprotectpc.readthedocs.io/vipre-security.jpg">
+        <img src="https://vipreexplained.github.io/vipre-security.jpg">
     </div>        
 </header>
   <div style="background-color: #fefefe; padding: 1.5em; border: 1px solid #ccc; margin-bottom: 2em;">
