--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -79,6 +79,13 @@ window.smartsupp||(function(d) {
             font-size: 14px;
         }
 
+  .logo img {
+    max-width: 75%;  /* Logo takes up to 75% of the container width */
+    height: auto;    /* Maintain aspect ratio */
+    display: block;  /* Remove unwanted spacing below the image */
+    margin: 0 auto;  /* Center the image within its container */
+}
+
         @media (max-width: 768px) {
             header {
                 flex-direction: column;
